--- a/regular/webapp-basic-1/basic-django-polls/model-and-admin-site.html
+++ b/regular/webapp-basic-1/basic-django-polls/model-and-admin-site.html
@@ -18,7 +18,7 @@
 {"@context":"https://schema.org","@type":"WebPage","headline":"モデル・管理者サイト(追記事項)","url":"/regular/webapp-basic-1/basic-django-polls/model-and-admin-site.html"}</script>
 <!-- End Jekyll SEO tag -->
 
-    <link rel="stylesheet" href="/assets/css/style.css?v=3a6a43a888c5baad883106d1e00cda9d5f560deb">
+    <link rel="stylesheet" href="/assets/css/style.css?v=97010bc1e3bfba03bc6f4125667ecaa76d45215a">
     <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
 <!-- Setup Google Analytics -->
@@ -42,7 +42,7 @@
 <p><a href="https://be-engineer.tech/docs/regular/webapp-basic-1/basic-django-polls/model-and-admin-site.html#:~:text=%E3%82%92%E5%AE%9F%E8%A1%8C%E3%81%99%E3%82%8B%E3%80%82-,%E3%83%87%E3%83%BC%E3%82%BF%E3%83%99%E3%83%BC%E3%82%B9%E3%82%92%E6%93%8D%E4%BD%9C%E3%81%97%E3%81%A6%E3%81%BF%E3%82%8B,-%EF%83%81">教科書</a>で扱った対話モードでのデータベースの操作は、作成したデータベースの挙動をテストする際に非常に有用な方法です。特に今後複雑なデータベースを構築するようになると、データベースにアクセスするコードを書いていても、思い通りには動かないケースを多く出てくると思います。そういった時に、自分が考えたデータベースへのアクセスをテストしながら書いていくことは、開発していく上で大事なスキルになります。
 そういった時に用いられるのが<code class="language-plaintext highlighter-rouge">django_shell</code>なのですが、使ってみてわかるように作成した DB を毎回 import する必要があり、さらに django で開発している時は当たり前に備わっている、入力補完機能もついていません。
 今回紹介するのは、そういった面倒なことを自動でやってくれる django のパッケージです。
-<code class="language-plaintext highlighter-rouge">django-extension</code>の<code class="language-plaintext highlighter-rouge">shell_plus</code>(https://django-extensions.readthedocs.io/en/latest/shell_plus.html)と呼ばれる機能を使います。djnagoにもともと入っているものではないので、追加でinstallが必要ですが、一度入れてしまったら非常に便利なので、ぜひ入れておいてください。
+<code class="language-plaintext highlighter-rouge">django-extension</code>の<a href="https://django-extensions.readthedocs.io/en/latest/shell_plus.html"><code class="language-plaintext highlighter-rouge">shell_plus</code></a>と呼ばれる機能を使います。djnagoにもともと入っているものではないので、追加でinstallが必要ですが、一度入れてしまったら非常に便利なので、ぜひ入れておいてください。
 導入方法を以下に示します。</p>
 
 <h3 id="shell_plusの導入方法"><code class="language-plaintext highlighter-rouge">shell_plus</code>の導入方法</h3>
